fix: Reinstate align items

--- a/src/components/styles/styles.scss
+++ b/src/components/styles/styles.scss
@@ -28,6 +28,7 @@ a {
 .main-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   min-height: 100vh;
 }
 
